--- a/app/style/modules/_reset.scss
+++ b/app/style/modules/_reset.scss
@@ -66,14 +66,13 @@ section, img, nav, figure {
   max-width: 100%;
 }
 button, input[type="button"] {
-  // adapted from Codepen: http://codepen.io/terkel/pen/dvejH
-  // removes browser button style defaults
+  /* adapted from Codepen: http://codepen.io/terkel/pen/dvejH
+  removes browser button style defaults */
   -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
   background: none;
   border: 0;
-  // padding: 1em;
   color: inherit;
   cursor: pointer;
   font: inherit;
