Make component build list

--- a/app/style/modules/_base.scss
+++ b/app/style/modules/_base.scss
@@ -1,3 +1,13 @@
 body {
   font-family: $main-font-regular;
 }
+h1 {
+  font-size: 200%;
+}
+h2 {
+  font-size: 150%;
+}
+ul {
+  padding: 1em;
+  margin: 1em;
+}
