add button mixin, add login wireframe

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -5,5 +5,6 @@
 @import "modules/colors.scss";
 @import "modules/flexbox.scss";
 @import "modules/icon-fonts.scss";
-
+@import "modules/button.scss";
+@import "partials/login.scss";
 
