add style to login component

--- a/app/style/modules/_typography.scss
+++ b/app/style/modules/_typography.scss
@@ -40,9 +40,9 @@ $main-font-bold: 'Ubuntu Bold', sans-serif;
 $accent-font-light: 'Roboto Slab Light', serif;
 $accent-font-regular: 'Roboto Slab', serif;
 
-$font-size-tiny: 20%;
-$font-size-small: 60%;
+//small is for fine print, regular is body text, headings are large or jumbo
+$font-size-small: 50%;
 $font-size-regular: 100%;
-$font-size-large: 140%;
-$font-size-jumbo: 180%;
+$font-size-large: 150%;
+$font-size-jumbo: 250%;
 
