--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -7,4 +7,5 @@
 @import "modules/icon-fonts.scss";
 @import "modules/button.scss";
 @import "partials/login.scss";
+@import "partials/footer.scss";
 
