add animations partial, add timer bar component.

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -6,6 +6,7 @@
 @import "modules/flexbox.scss";
 @import "modules/icon-fonts.scss";
 @import "modules/button.scss";
+@import "modules/animations.scss";
 @import "partials/login.scss";
 @import "partials/footer.scss";
 
