refine timer bar animation

--- a/app/style/modules/_animations.scss
+++ b/app/style/modules/_animations.scss
@@ -26,6 +26,7 @@
 }
 
 .countdown-timer {
+  margin: 2em 0 2em 0; //temporary just for component display 
   width: 5%;
   height: 2em;
   background: $text-color-theme;
