Build category button component

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -6,6 +6,8 @@
 @import "modules/flexbox.scss";
 @import "modules/icon-fonts.scss";
 @import "modules/button.scss";
+
 @import "partials/login.scss";
 @import "partials/footer.scss";
+@import "partials/category-button.scss";
 
