Build logout button component

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -10,4 +10,5 @@
 @import "partials/login.scss";
 @import "partials/footer.scss";
 @import "partials/category-button.scss";
+@import "partials/logout-button.scss";
 
