--- a/app/style/partials/_category-button.scss
+++ b/app/style/partials/_category-button.scss
@@ -1,6 +1,6 @@
 .cat-button {
-  display: block;
   @include button($text-color-dark, $background-color-theme, $border-color-med, $main-font-bold, $font-size-regular, $background-color-theme, $text-color-dark, uppercase);
+  display: block;
+  margin: 0.25em auto;
   width: 25%;
-  margin: 0 auto;
 }
