Build Quit button component

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -11,4 +11,5 @@
 @import "partials/footer.scss";
 @import "partials/category-button.scss";
 @import "partials/logout-button.scss";
+@import "partials/quit-button.scss";
 
