Build play now button component

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -12,4 +12,4 @@
 @import "partials/category-button.scss";
 @import "partials/logout-button.scss";
 @import "partials/quit-button.scss";
-
+@import "partials/play-button.scss";
