--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -10,6 +10,7 @@
 @import "partials/login.scss";
 @import "partials/footer.scss";
 @import "partials/category-button.scss";
+@import "partials/play-button.scss";
 @import "partials/logout-button.scss";
 @import "partials/quit-button.scss";
-@import "partials/play-button.scss";
+@import "partials/to-profile-button.scss";
