Build answer choice button components

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -8,9 +8,13 @@
 @import "modules/button.scss";
 
 @import "partials/login.scss";
+@import "partials/answers.scss";
 @import "partials/footer.scss";
+
+// buttons
 @import "partials/category-button.scss";
 @import "partials/play-button.scss";
 @import "partials/logout-button.scss";
 @import "partials/quit-button.scss";
 @import "partials/to-profile-button.scss";
+@import "partials/answer-button.scss";
