--- a/app/style/modules/_button.scss
+++ b/app/style/modules/_button.scss
@@ -32,7 +32,7 @@
   width: 100%;
   padding: 1em;
   border: 1px solid $border-color;
-  border-radius: 5%/20%;
+  border-radius: 0.5em;
   background-color: $background-color;
   -webkit-transition: color 0.3s, background-color 0.3s;
           transition: color 0.3s, background-color 0.3s;
