--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -9,6 +9,7 @@
 
 @import "partials/login.scss";
 @import "partials/footer.scss";
+@import "partials/question-card.scss";
 @import "partials/category-button.scss";
 @import "partials/play-button.scss";
 @import "partials/logout-button.scss";
