Build question view

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -10,6 +10,7 @@
 @import "partials/login.scss";
 @import "partials/answers.scss";
 @import "partials/footer.scss";
+@import "partials/game-round.scss";
 @import "partials/question-card.scss";
 // buttons
 @import "partials/category-button.scss";
