--- a/app/style/modules/_colors.scss
+++ b/app/style/modules/_colors.scss
@@ -1,7 +1,7 @@
-$color1: #000;
+$color1: #1F1F1F;
 $color2: lighten($color1, 60%);
 $color3: #fff;
-$color4: #97f1e7;
+$color4: #1CB2FF;
 
 $text-color-dark: $color1;
 $text-color-med: $color2;
