Build category choice view

--- a/app/style/partials/_category-card.scss
+++ b/app/style/partials/_category-card.scss
@@ -1,5 +1,5 @@
-.q-card {
-  margin: 1em auto 0 auto;
+.cat-card {
+  margin: 0 auto;
   border: 3px solid $border-color-theme;
   border-radius: 0.5em;
   padding: 0.75em 5%;
