--- a/app/style/partials/_header.scss
+++ b/app/style/partials/_header.scss
@@ -4,10 +4,17 @@ header {
     text-align: center;
     margin-bottom: 0.25em;
   }
-  h2 {
-    @include set-font($text-color-light, $main-font-light-italic, $font-size-regular, "auto");
-    text-align: center;
+  figure {
+    @include flex-container(flex,row,wrap,center,center,center);
     margin-bottom: 0.5em;
+    img {
+      margin-right: 0.5em;
+      width: 8%;
+      border-radius: 0.25em;
+    }
+  }
+  figcaption {
+    @include set-font($text-color-light, $main-font-light-italic, $font-size-regular, "auto");
   }
   h3 {
     @include set-font($text-color-theme, $main-font-regular, $font-size-regular, "auto");
