WIP add components related to player profile, commit before pulling

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -19,3 +19,4 @@
 @import "partials/quit-button.scss";
 @import "partials/to-profile-button.scss";
 @import "partials/answer-button.scss";
+@import "partials/player-stat-indicator.scss";
