change filenames for player stat indicator to rating-indicator and player-profile

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -22,4 +22,5 @@
 @import "partials/quit-button.scss";
 @import "partials/to-profile-button.scss";
 @import "partials/answer-button.scss";
-@import "partials/player-stat-indicator.scss";
+@import "partials/rating-indicator.scss";
+@import "partials/player-profile.scss";
