add fonts and placeholder star ranking to profile

--- a/app/style/partials/_player-profile.scss
+++ b/app/style/partials/_player-profile.scss
@@ -2,7 +2,7 @@
   position: relative;
   text-align: center;
   width: 80%;
-  border: 3px solid $border-color-dark;
+  border: 3px solid $border-color-theme;
   border-radius: 0.5em;
   background-color: $background-color-light;
   margin: auto;
