--- a/app/style/partials/_rating-indicator.scss
+++ b/app/style/partials/_rating-indicator.scss
@@ -6,7 +6,7 @@
   background-color: $background-color-theme;
   border: 3px solid $border-color-dark;
   border-radius: 0.5em;
-  margin: 0;
+  margin: 1%;
   min-width: 25%;
 }
   .category-1 p:nth-of-type(2)::before {
