--- a/app/style/modules/_logo-icon.scss
+++ b/app/style/modules/_logo-icon.scss
@@ -26,9 +26,9 @@
 .icon-avatar-bw:before {
   content: '\e000';
   color: $text-color-theme;
-  background-color: $background-color-dark;
+  border: 1px solid $border-color-theme;
   border-radius: 50%;
-  padding: 0.2em;
-  margin-right: 0.25em;
-  font-size: 2em;
+  padding: 0.15em;
+  margin-right: 0.1em;
+  font-size: 1.2em;
 }
