--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -1,3 +1,4 @@
+// MODULES
 @import "modules/reset.scss";
 @import "modules/typography.scss";
 @import "modules/base.scss";
@@ -8,18 +9,23 @@
 @import "modules/button.scss";
 @import "modules/animations.scss";
 
+// PARTIALS
 @import "partials/login.scss";
 @import "partials/answers.scss";
 @import "partials/header.scss";
 @import "partials/footer.scss";
 @import "partials/game-round.scss";
 @import "partials/question-card.scss";
+@import "partials/answer-card.scss";
 @import "partials/category-pick.scss";
-// buttons
-@import "partials/category-button.scss";
-@import "partials/play-button.scss";
-@import "partials/logout-button.scss";
-@import "partials/quit-button.scss";
-@import "partials/to-profile-button.scss";
-@import "partials/answer-button.scss";
 @import "partials/player-stat-indicator.scss";
+  // buttons
+  @import "partials/buttons/category-button.scss";
+  @import "partials/buttons/play-button.scss";
+  @import "partials/buttons/logout-button.scss";
+  @import "partials/buttons/quit-button.scss";
+  @import "partials/buttons/to-profile-button.scss";
+  @import "partials/buttons/answer-button.scss";
+
+// VENDOR
+@import "vendor/animate.scss";
