--- a/app/style/modules/_colors.scss
+++ b/app/style/modules/_colors.scss
@@ -2,18 +2,26 @@ $color1: #1F1F1F;
 $color2: lighten($color1, 60%);
 $color3: #fff;
 $color4: #1CB2FF;
+$color5: #19FF40;
+$color6: red;
 
 $text-color-dark: $color1;
 $text-color-med: $color2;
 $text-color-light: $color3;
 $text-color-theme: $color4;
+$text-color-correct: darken($color5, 20%);
+$text-color-wrong: darken($color6, 20%);
 
 $background-color-dark: $color1;
 $background-color-med: $color2;
 $background-color-light: $color3;
 $background-color-theme: $color4;
+$background-color-correct: lighten($color5, 35%);
+$background-color-wrong: lighten($color6, 30%);
 
 $border-color-dark: $color1;
 $border-color-med: $color2;
 $border-color-light: $color3;
 $border-color-theme: $color4;
+$border-color-correct: $color5;
+$border-color-wrong: $color6;
