login screen view

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -8,7 +8,8 @@
 @import "modules/button.scss";
 @import "modules/animations.scss";
 
-@import "partials/login.scss";
+@import "partials/login-screen.scss";
+@import "partials/login-form.scss";
 @import "partials/answers.scss";
 @import "partials/header.scss";
 @import "partials/footer.scss";
