rename custom animations to avoid label conflict with vendor animation, changed sequence of main.scss imports.

--- a/app/style/modules/_animations.scss
+++ b/app/style/modules/_animations.scss
@@ -1,4 +1,4 @@
-.slideInDown {
+.slide-in-down {
   -webkit-animation-name: slideInDown;
   animation-name: slideInDown;
   -webkit-animation-duration: 1s;
@@ -25,7 +25,7 @@
   }
 }
 
-.slideInLeft {
+.slide-in-left {
   -webkit-animation-name: slideInLeft;
   animation-name: slideInLeft;
   -webkit-animation-duration: 1s;
@@ -52,7 +52,7 @@
   }
 }
 
-.slideInUp {
+.slide-in-up {
   -webkit-animation-name: slideInUp;
   animation-name: slideInUp;
   -webkit-animation-duration: 1s;
@@ -79,7 +79,7 @@
   }
 }
 
-.slideInRight {
+.slide-in-right {
   -webkit-animation-name: slideInRight;
   animation-name: slideInRight;
   -webkit-animation-duration: 1s;
