Make mascot colorways, add footer to all draft views

--- a/app/style/modules/_colors.scss
+++ b/app/style/modules/_colors.scss
@@ -3,7 +3,16 @@ $color2: lighten($color1, 60%);
 $color3: #fff;
 $color4: #1CB2FF;
 $color5: #19FF40;
-$color6: red;
+$color6: #FF0000;
+
+// avatar/mascot colors
+$avatar-color1: #FF0000; // red
+$avatar-color1: #FF5C0E; // orange
+$avatar-color1: #FFFF00; // yellow
+$avatar-color1: #78FF00; // green 
+$avatar-color1: #1CB2FF; // blue 
+$avatar-color1: #7B00FF; // purple 
+$avatar-color1: #F700FF; // pink
 
 $text-color-dark: $color1;
 $text-color-med: $color2;
