--- a/app/style/partials/buttons/_quit-button.scss
+++ b/app/style/partials/buttons/_quit-button.scss
@@ -1,5 +1,5 @@
 .quit-button {
-  @include button($text-color-light, $background-color-dark, $border-color-med, $main-font-light-italic, $font-size-small, $background-color-dark, $text-color-light);
+  @include button($text-color-light, $background-color-dark, $border-color-med, $main-font-light-italic, $font-size-regular, $background-color-dark, $text-color-light);
   display: block;
   margin: 0.25em auto;
   padding: 0.5em;
