--- a/app/style/partials/buttons/_to-profile-button.scss
+++ b/app/style/partials/buttons/_to-profile-button.scss
@@ -1,7 +1,7 @@
 .to-profile-button {
-  @include button($text-color-dark, $background-color-light, $border-color-med, $main-font-regular, $font-size-regular, $background-color-light, $text-color-dark);
+  @include button($text-color-light, $background-color-dark, $border-color-med, $main-font-light-italic, $font-size-regular, $background-color-dark, $text-color-light);
   display: block;
   margin: 0.25em auto;
   padding: 0.5em;
-  width: 30%; 
+  width: 25%; 
 }
