WIP add opponent components

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -22,6 +22,8 @@
 @import "partials/category-pick.scss";
 @import "partials/rating-indicator.scss";
 @import "partials/player-profile.scss";
+@import "partials/opponents-card.scss";
+@import "partials/individual-opponent-console.scss";
   // buttons
   @import "partials/buttons/category-button.scss";
   @import "partials/buttons/play-button.scss";
@@ -29,6 +31,8 @@
   @import "partials/buttons/quit-button.scss";
   @import "partials/buttons/to-profile-button.scss";
   @import "partials/buttons/answer-button.scss";
+  @import "partials/buttons/opponent-profile-button.scss";
+  @import "partials/buttons/challenge-button.scss";
 
 // VENDOR
 @import "vendor/animate.scss";
