--- a/app/style/partials/buttons/_challenge-button.scss
+++ b/app/style/partials/buttons/_challenge-button.scss
@@ -1,6 +1,7 @@
 .challenge-button {
   @include button($text-color-dark, $background-color-theme, $border-color-med, $main-font-bold, $font-size-regular, $background-color-theme, $text-color-dark, uppercase);
   display: block;
-  margin: 0.25em auto;
+  margin: 0.25em;
   width: 90%;
+  min-height: 4em;
 }
