--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -21,6 +21,8 @@
 @import "partials/answer-card.scss";
 @import "partials/score-card.scss";
 @import "partials/category-pick.scss";
+@import "partials/game-pick.scss";
+@import "partials/games-card.scss";
 @import "partials/rank-indicator.scss";
 @import "partials/player-profile.scss";
   // buttons
