--- a/app/style/partials/buttons/_answer-button.scss
+++ b/app/style/partials/buttons/_answer-button.scss
@@ -1,10 +1,10 @@
 .answer-button {
-  @include button($text-color-dark, $background-color-theme, $border-color-med, $main-font-bold, $font-size-regular, $background-color-theme, $text-color-dark, uppercase);
+  @extend %navigate-forward-button-uppercase;
+  width: 48%;
+  min-height: 4.6em;
   @include flex-container(inline-flex,row,wrap,center,center,center);
   position: relative;
-  width: 48%;
   margin: 0.25em 1%;
-  min-height: 4.6em;
   .letter {
     font-size: $font-size-large;
     width: 13%;
