--- a/app/style/partials/buttons/_challenge-button.scss
+++ b/app/style/partials/buttons/_challenge-button.scss
@@ -1,7 +1,6 @@
 .challenge-button {
-  @include button($text-color-dark, $background-color-theme, $border-color-med, $main-font-bold, $font-size-regular, $background-color-theme, $text-color-dark, uppercase);
-  display: block;
-  margin: 0.25em;
+  @extend %navigate-forward-button-uppercase;
   width: 90%;
-  min-height: 4em;
+  display: block;
+  margin: 0.25em auto;
 }
