--- a/app/style/partials/buttons/_opponent-profile-button.scss
+++ b/app/style/partials/buttons/_opponent-profile-button.scss
@@ -1,7 +1,6 @@
 .opponent-profile-button {
-  @include button($text-color-dark, $background-color-theme, $border-color-med, $main-font-bold, $font-size-regular, $background-color-theme, $text-color-dark, uppercase);
+  @extend %navigate-forward-button-uppercase;
+  width: 90%;    
   display: block;
   margin: 0.25em;
-  width: 90%;    
-  min-height: 4em;
 }
