--- a/app/style/partials/buttons/_play-button.scss
+++ b/app/style/partials/buttons/_play-button.scss
@@ -1,6 +1,6 @@
 .play-button {
-  @include button($text-color-dark, $background-color-theme, $border-color-med, $main-font-bold, $font-size-regular, $background-color-theme, $text-color-dark, uppercase);
+  @extend %navigate-forward-button-uppercase;
+  width: 90%;
   display: block;
   margin: 1em auto;
-  width: 90%;
 }
