--- a/app/style/partials/_login-form.scss
+++ b/app/style/partials/_login-form.scss
@@ -21,3 +21,47 @@
     color: $text-color-theme;
   }
 }
+
+.user-avatar-selector {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  legend {
+    padding-top: 1em;
+  }
+  li {
+    display: inline-block;
+    margin: 0.25em;
+    min-width: 5em;
+    min-height: 5em;
+    position: relative;
+  }
+  img {
+    width: 80%;
+  }
+  label, input {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  input[type="radio"] {
+    opacity: 0.01;
+    z-index: 100;
+    height: 5em;
+    width: 100%;
+  }
+  label {
+    padding: 5px;
+    border: 3px solid $border-color-theme; 
+    border-radius: 50%;
+    z-index: 90;
+    -webkit-transition: background-color 0.3s;
+      transition: background-color 0.3s;
+  }
+  input[type="radio"]:checked + label {
+    background: $background-color-theme;
+  }
+}
