--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -8,19 +8,56 @@
       <input class="button" type="submit" value="Let's play"/>
     </fieldset>
   </form>
-  <form class="login" id="login">
-    <fieldset class="slide-in-up">
+</section>
+<section class="component">
+  <form class="login slide-in-up" id="new-user">
+    <fieldset>
       <legend>New User</legend>
       <input name="username" type="text" placeholder="username"/>
       <input name="password" type="text" placeholder="password"/>
-      <fieldset>
-        <input name="avatar" type="radio" value="Red"/>
-        <input name="avatar" type="radio" value="Orange"/>
-        <input name="avatar" type="radio" value="Yellow"/>
-        <input name="avatar" type="radio" value="Green"/>
-        <input name="avatar" type="radio" value="Purple"/>
+      <input name="password" type="text" placeholder="re-enter password"/>
+      <fieldset class="user-avatar-selector">
+        <legend>Select your avatar</legend>
+        <ul>
+          <li class="slide-in-right">
+            <input name="avatar" type="radio" value="red"/>
+            <label>
+              <img src="temp/avatar1.svg">
+            </label>
+          </li>
+          <li class="slide-in-left">
+            <input name="avatar" type="radio" value="orange"/>
+            <label>
+              <img src="temp/avatar2.svg">
+            </label>
+          </li>
+          <li class="slide-in-right">
+            <input name="avatar" type="radio" value="yellow"/>
+            <label>
+              <img src="temp/avatar3.svg">
+            </label>
+          </li>
+          <li class="slide-in-left">
+            <input name="avatar" type="radio" value="green"/>
+            <label>
+              <img src="temp/avatar4.svg">
+            </label>
+          </li>
+          <li class="slide-in-right">
+            <input name="avatar" type="radio" value="purple"/>
+            <label>
+              <img src="temp/avatar6.svg">
+            </label>
+          </li>
+          <li class="slide-in-left">
+            <input name="avatar" type="radio" value="pink"/>
+            <label>
+              <img src="temp/avatar7.svg">
+            </label>
+          </li>
+        </ul>
       </fieldset>
-      <input class="button" type="submit" value="Let's play"/>
+      <input class="button" type="submit" value="New Player"/>
     </fieldset>
   </form>
 </section>
