Add starbar icon to fonts, build starbar percentage icon

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -5,7 +5,7 @@
 @import "modules/flexbox.scss";
 @import "modules/base.scss";
 @import "modules/breaks.scss";
-@import "modules/logo-icon.scss";
+@import "modules/icons.scss";
 @import "modules/button.scss";
 @import "modules/animations.scss";
 
@@ -14,6 +14,7 @@
 @import "partials/login-screen.scss";
 @import "partials/login-form.scss";
 @import "partials/answers.scss";
+@import "partials/percentage-stars.scss";
 @import "partials/header.scss";
 @import "partials/footer.scss";
 @import "partials/game-play.scss";
