--- a/app/style/modules/_icons.scss
+++ b/app/style/modules/_icons.scss
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "logo_icon";
-  src:url("fonts/logo_icon.eot");
-  src:url("fonts/logo_icon.eot?#iefix") format("embedded-opentype"),
-    url("fonts/logo_icon.woff") format("woff"),
-    url("fonts/logo_icon.ttf") format("truetype"),
-    url("fonts/logo_icon.svg#logo_icon") format("svg");
+  font-family: "icons";
+  src:url("fonts/icons.eot");
+  src:url("fonts/icons.eot?#iefix") format("embedded-opentype"),
+    url("fonts/icons.woff") format("woff"),
+    url("fonts/icons.ttf") format("truetype"),
+    url("fonts/icons.svg#icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "logo_icon";
+  font-family: "icons";
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -23,8 +23,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-starbar:before {
+  content: "\e001";
+  color: $text-color-dark;
+  font-size: 1000%;
+}
+
 .icon-avatar-bw:before {
-  content: '\e000';
+  content: "\e000";
   color: $text-color-theme;
   border: 1px solid $border-color-theme;
   border-radius: 50%;
