--- a/app/templates/views/profile_view.html
+++ b/app/templates/views/profile_view.html
@@ -3,15 +3,15 @@
     <h1 class="notes">User stat graphic (bottom):</h1>
     <aside class="rating-indicator-container left">
       <div class="rank-indicator category-1 slide-in-left">
-        <p>History</p>
+        <p>Sports</p>
         <p>{{ rankings(category1) }}</p>
       </div>
       <div class="rank-indicator category-2 slide-in-down">
-        <p>Sports</p>
-        <p>{{ rankings(category2) }}</p>
+        <p></p>
+        <p></p>
       </div>
       <div class="rank-indicator category-3 slide-in-right">
-        <p>Sports</p>
+        <p>Entertainment</p>
         <p>{{ rankings(category2) }}</p>
       </div>
     </aside>
@@ -33,16 +33,16 @@
     <h1 class="notes">User stat graphic (top):</h1>
     <aside class="rating-indicator-container right">
       <div class="rank-indicator category-4 slide-in-left">
-        <p>Entertainment</p>
-        <p></p>
+        <p>History</p>
+        <p>{{ rankings(category3) }}</p>
       </div>
       <div class="rank-indicator category-5 slide-in-up">
-        <p>Food</p>
+        <p></p>
         <p></p>
       </div>
       <div class="rank-indicator category-6 slide-in-right">
-        <p>Sports</p>
-        <p></p>
+        <p>Science</p>
+        <p>{{ rankings(category4) }}</p>
       </div>
     </aside>
   </section>
