--- a/app/templates/views/profile_view.html
+++ b/app/templates/views/profile_view.html
@@ -2,17 +2,17 @@
   <section class="component">
     <h1 class="notes">User stat graphic (bottom):</h1>
     <aside class="rating-indicator-container left">
-      <div class="rank-indicator category-1 slide-in-left">
+      <div class="rank-indicator category-sports slide-in-left">
         <p>Sports</p>
-        <p>{{ rankings(category1) }}</p>
+        <p>{{ rankings }}</p>
       </div>
-      <div class="rank-indicator category-2 slide-in-down">
+<!--       <div class="rank-indicator category-2 slide-in-down">
         <p></p>
         <p></p>
-      </div>
-      <div class="rank-indicator category-3 slide-in-right">
+      </div> -->
+      <div class="rank-indicator category-entertainment slide-in-right">
         <p>Entertainment</p>
-        <p>{{ rankings(category2) }}</p>
+        <p>{{ rankings }}</p>
       </div>
     </aside>
   </section>
@@ -32,17 +32,17 @@
   <section class="component">
     <h1 class="notes">User stat graphic (top):</h1>
     <aside class="rating-indicator-container right">
-      <div class="rank-indicator category-4 slide-in-left">
+      <div class="rank-indicator category-history slide-in-left">
         <p>History</p>
-        <p>{{ rankings(category3) }}</p>
+        <p>{{ rankings }}</p>
       </div>
-      <div class="rank-indicator category-5 slide-in-up">
+<!--       <div class="rank-indicator category-5 slide-in-up">
         <p></p>
         <p></p>
-      </div>
-      <div class="rank-indicator category-6 slide-in-right">
+      </div> -->
+      <div class="rank-indicator category-science slide-in-right">
         <p>Science</p>
-        <p>{{ rankings(category4) }}</p>
+        <p>{{ rankings }}</p>
       </div>
     </aside>
   </section>
