--- a/app/templates/views/profile_view.html
+++ b/app/templates/views/profile_view.html
@@ -1,6 +1,6 @@
 <article data-ng-controller="ProfileController">
   <section class="component">
-    <h1 class="notes">User stat graphic (bottom):</h1>
+    <!-- <h1 class="notes">User stat graphic (bottom):</h1> -->
     <aside class="rating-indicator-container left">
       <div class="rank-indicator category-sports slide-in-left">
         <p>Sports</p>
@@ -18,19 +18,19 @@
   </section>
 
   <section class="component">
-    <h1 class="notes">User profile card:</h1>
+    <!-- <h1 class="notes">User profile card:</h1> -->
     <section class="player-profile">
       <h1>TriviApp</h1>
       <figure><img src="temp/avatar5.svg"><figcaption>{{user.username}}</figcaption></figure>      
       <h3>{{"FIVE"}}</h3>
       <h3>{{"TIMESTAMP"}}</h3>
     </section>
-    <a class="logout-button" href="/signin">Log Out</a>
     <a class="play-button">Play Button</a>
+    <a class="logout-button" href="/signin">Log Out</a>
   </section>
 
   <section class="component">
-    <h1 class="notes">User stat graphic (top):</h1>
+    <!-- <h1 class="notes">User stat graphic (top):</h1> -->
     <aside class="rating-indicator-container right">
       <div class="rank-indicator category-history slide-in-left">
         <p>History</p>
