--- a/app/templates/views/profile_view.html
+++ b/app/templates/views/profile_view.html
@@ -4,7 +4,7 @@
     <aside class="rating-indicator-container left">
       <div class="rank-indicator category-sports slide-in-left">
         <p>Sports</p>
-        <p>{{ rankings }}</p>
+        <p ng-class="star-rating"></p>
       </div>
 <!--       <div class="rank-indicator category-2 slide-in-down">
         <p></p>
@@ -12,7 +12,7 @@
       </div> -->
       <div class="rank-indicator category-entertainment slide-in-right">
         <p>Entertainment</p>
-        <p>{{ rankings }}</p>
+        <p ng-class="star-rating"></p>
       </div>
     </aside>
   </section>
@@ -34,7 +34,7 @@
     <aside class="rating-indicator-container right">
       <div class="rank-indicator category-history slide-in-left">
         <p>History</p>
-        <p>{{ rankings }}</p>
+        <p ng-class="star-rating"></p>
       </div>
 <!--       <div class="rank-indicator category-5 slide-in-up">
         <p></p>
@@ -42,7 +42,7 @@
       </div> -->
       <div class="rank-indicator category-science slide-in-right">
         <p>Science</p>
-        <p>{{ rankings }}</p>
+        <p ng-class="star-rating"></p>
       </div>
     </aside>
   </section>
