comment out placeholders in rank-indicator partial

--- a/app/style/partials/_rank-indicator.scss
+++ b/app/style/partials/_rank-indicator.scss
@@ -9,18 +9,18 @@
   margin: 1%;
   min-width: 25%;
 }
-  .category-sports .rank::before {
-    content: "\2605 \2605 \2605 \2606 \2606";
-  }
-  .category-entertainment .rank::before {
-    content: "\2605 \2605 \2605 \2605 \2605";
-  }
-  .category-history .rank::before {
-    content: "\2605 \2606 \2606 \2606 \2606";
-  }
-  .category-science .rank::before {
-    content: "\2606 \2606 \2606 \2606 \2606";
-  }
+  // .category-sports .rank::before {
+  //   content: "\2605 \2605 \2605 \2606 \2606";
+  // }
+  // .category-entertainment .rank::before {
+  //   content: "\2605 \2605 \2605 \2605 \2605";
+  // }
+  // .category-history .rank::before {
+  //   content: "\2605 \2606 \2606 \2606 \2606";
+  // }
+  // .category-science .rank::before {
+  //   content: "\2606 \2606 \2606 \2606 \2606";
+  // }
 
 .star-one::before {
   content: "\2605 \2606 \2606 \2606 \2606";
