--- a/app/style/partials/_question-card.scss
+++ b/app/style/partials/_question-card.scss
@@ -10,6 +10,7 @@
     @include set-font($text-color-dark, $main-font-regular, $font-size-jumbo, "auto");
     text-align: center;
     margin-bottom: 0.5em;
+    text-transform: capitalize;
   }
   h2 {
     @include set-font($text-color-dark, $main-font-regular, $font-size-large, "auto");
