--- a/app/style/partials/_login-form.scss
+++ b/app/style/partials/_login-form.scss
@@ -11,6 +11,9 @@
     width: 50%;
     margin-top: 1em;
   }
+  .away-button {
+    @extend %navigate-away-button;
+  }
   input {
     @include set-font;
     display: block;
