correct scss in login-form to target away button correctly.

--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -5,7 +5,7 @@
       <fieldset class="slide-in-down">
         <legend>Login</legend>
         <input name="username" type="text" placeholder="username"/>
-        <input name="password" type="text" placeholder="password"/>
+        <input name="password" type="password" placeholder="password"/>
         <input class="button" type="submit" value="Let's play now!"/>
         <input data-ng-click="newUserSignup()" class="away-button" type="submit" value="create new account"/>
       </fieldset>
