Finalize styles for gameplay, insert conditional to end game

--- a/app/style/partials/_question-card.scss
+++ b/app/style/partials/_question-card.scss
@@ -20,4 +20,12 @@
     text-align: center;
     line-height: 1.5;   
   }
+  &.right {
+    background-color: $background-color-correct;
+    border-color: $border-color-correct;
+  }
+  &.wrong {
+    background-color: $background-color-wrong;
+    border-color: $border-color-wrong;
+  }
 }
