--- a/app/templates/views/scorecard_view.html
+++ b/app/templates/views/scorecard_view.html
@@ -1,19 +1,18 @@
 <section class="score-card">
   <div data-result-list
        data-category-header="categoryName"
-       data-questions="question"
       ></div>
-
-      <div data-ng-repeat="question in questionsArr">{{question.question}}<br />{{question.correctAnswer}}</div>
-      <div></div>
-  <h1>Entertainment Score</h1>
-  <!-- <h2 class="star zero"></h2> -->
-  <!-- <h2 class="star one"></h2> -->
-  <h2 class="star two"></h2>
-  <!-- <h2 class="star three"></h2> -->
-  <!-- <h2 class="star four"></h2> -->
-  <!-- <h2 class="star five"></h2> -->
+  <div class="stars">
+    <span class="icon-star-incorrect"></span>
+    <span class="icon-star-incorrect"></span>
+    <span class="icon-star-incorrect"></span>
+    <span class="icon-star-incorrect"></span>
+    <span class="icon-star-incorrect"></span>
+  </div>
   <p class="score">2 correct of 5</p>
+  <div data-ng-repeat="question in questionsArr">{{question.question}}<br />{{question.correctAnswer}}</div>
+
+  
 
   
 
