File structure refactor

--- a/app/templates/views/scorecard_view.html
+++ b/app/templates/views/scorecard_view.html
@@ -11,6 +11,7 @@
   </div>
   <p class="score">{{right}} correct of 5</p>
   <ul>
+    <p>Here's what you missed:</p>
     <li data-ng-repeat="obj in incorrectArr">{{obj}}</li>
   </ul>
   
