--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -61,9 +61,9 @@
             </li>
           </ul>
         </fieldset>
-        <input class="button" type="submit" value="Add New Player"/>
-        <input data-ng-click="oldUserSignin()" class="away-button" type="submit" value="return to login"/>
+        <input class="button" type="submit" value="Add Player"/>
       </fieldset>
     </form>
+    <input data-ng-click="oldUserSignin()" class="away-button" type="submit" value="return to login"/>
   </section>
 </div>
