--- a/app/style/partials/_score-card.scss
+++ b/app/style/partials/_score-card.scss
@@ -31,8 +31,11 @@
     li {
       margin: 0.5em;
     }
-    li:nth-child(odd) {
-      @include set-font($text-color-dark, $main-font-regular, $font-size-regular, "auto");
+    li:nth-child(odd).correct {
+      @include set-font($text-color-correct, $main-font-regular, $font-size-regular, "auto");
+    }
+    li:nth-child(odd).incorrect {
+      @include set-font($text-color-wrong, $main-font-regular, $font-size-regular, "auto");
     }
     li:nth-child(even) {
       @include set-font($text-color-dark, $main-font-light-italic, $font-size-regular, "auto");
@@ -49,8 +52,10 @@
   .stars {
     text-align: center;
   }
-  p.score {
+  .score {
     @include set-font($text-color-dark, $main-font-bold, $font-size-regular, uppercase);
+    margin-top: -1.25em;
+    padding-bottom: 1em;
   }
   .zero.star:before {
     content: "\2606 \2606 \2606 \2606 \2606";
