--- a/app/templates/views/gameplay_view.html
+++ b/app/templates/views/gameplay_view.html
@@ -7,3 +7,4 @@
     <a data-ng-repeat="answer in answers" data-ng-click="checkAnswer(answer)" class="answer-button" data-ng-class="{'chosen': isChosen, 'correct': isCorrect, 'incorrect': isIncorrect, 'animated':isAnimated, 'hinge': runHinge, 'rubberBand':runRubberBand}">{{answer}}</a>
   </div>
 </section>
+<a class="small-button quit" href="#">Quit</a>
