refactor SCSS to include separate partials for login buttons.

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -40,6 +40,9 @@
   @import "partials/buttons/answer-button.scss";
   @import "partials/buttons/opponent-profile-button.scss";
   @import "partials/buttons/challenge-button.scss";
+  @import "partials/buttons/login-form-away-buttons.scss";
+  @import "partials/buttons/login-form-forward-buttons.scss";
+  
 
 // VENDOR
 @import "vendor/animate.scss";
