Fix quotes typo

--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -18,7 +18,7 @@
       <fieldset>
         <legend>New User</legend>
         <input name="username" type="text" placeholder="username" data-ng-model="user.username" tabindex="5"/>
-        <input name="password" type="password" placeholder="password" data-ng-model="user.password tabindex="6""/>
+        <input name="password" type="password" placeholder="password" data-ng-model="user.password" tabindex="6"/>
         <input name="password" type="password" placeholder="re-enter password" data-ng-model="user.confirmPassword" tabindex="7"/>
         <fieldset class="user-avatar-selector">
           <legend>Select your avatar</legend>
